# earthquake_pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
scripts/: verify_api_contract.py
src/earthquake/: config.py  fetcher.py  logging_config.py  models.py  pipeline.py  storage.py  transform.py
tests/: test_fetcher.py  test_pipeline.py  test_storage.py  test_transform.py
